--- a/0 - ENEM 2019 - Experimento Machine Learning - Introdução.ipynb
+++ b/0 - ENEM 2019 - Experimento Machine Learning - Introdução.ipynb
@@ -53,9 +53,17 @@
     "\n",
     "Com o interesse em conhecer e medir os fatores que determinam um bom desempenho na redação, o objeto deste experimento é usar modelos de **machine learning** que permitam agrupar os participantes, bem como prever o desempenho e as nota a partir dos dados obtidos no EMEM de 2019.\n",
     "\n",
+    "A métrica que definirá o desempenho na redação será construida a partir da criação de três classes:\n",
+    "- Participantes abaixo da média\n",
+    "- Participantes dentro da media\n",
+    "- Participantes abaixo da média\n",
+    "\n",
+    "Tal média não será estabelecida por um valor único, mas pelo uso de um intervalo de confiança que considera a margem de erro.\n",
+    "\n",
     "Os modelos e técnicas considerados neste este experimento são\n",
     "* Redução de Dimensionalidade \n",
     "* Agrupamento\n",
+    "* Classificação\n",
     "* Regressão\n",
     "\n",
     "Espera-se, com este trabalho, obter mais clareza sobre os fatores que determinam o bom desempenho, além de iniciar discussões a respeito de iniciativas que podem ajudar os participantes durante a preparação para o exame. "
@@ -71,8 +79,9 @@
     "1. Pré-processamento\n",
     "2. Análise exploratória de dados\n",
     "3. Redução de Dimensionalidade e agrupamento\n",
-    "4. Previsão da nota de redação\n",
-    "5. Conclusão"
+    "4. Classificação\n",
+    "5. Previsão da nota de redação\n",
+    "6. Conclusão"
    ]
   },
   {
